Fix header visibility

--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 
 .page-title {
 	color: white;
+	text-shadow: 0px 0px 5px rgba(5, 5, 5, 0.5);
 }
 
 .text-center {
@@ -45,6 +46,12 @@ h1, h2, .btn {
 h3 {
 	font-family: "Source Sans Pro", sans-serif;
 	font-weight: 300;
+}
+
+@media (max-width: 768px) {
+	h3 {
+		font-size: 16px;
+	}
 }
 
 p, li {
